--- a/src/Components/styles/start.css
+++ b/src/Components/styles/start.css
@@ -47,3 +47,14 @@
 .char-grid img {
     width: 80px;
 }
+
+.name {
+    margin-top: 45px;
+}
+.name input {
+    padding: 15px;
+    border-radius: 15px;
+    font-size: 18px;
+    outline: none;
+    border: 2px solid grey;
+}
